--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,11 @@ spring.jpa.show-sql=true
 spring.mvc.view.prefix=/pages/
 spring.mvc.view.suffix=.jsp
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kampallysamardhan23@gmail.com
+spring.mail.password=ftlfznmirmiyjvsz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 
